clusters/fremont/marketing/marketing-site-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketing-site
  namespace: marketing
spec:
  selector:
    matchLabels:
      app: marketing-site
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: marketing-site
    spec:
      containers:
      - name: nginx
        image: ghcr.io/milkshak3s/nginx-from-base64:v0.1.0
        ports:
        - containerPort: 80
