clusters/fremont/marketing/marketing-site-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketing-site-svc
  namespace: marketing
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: marketing-site
  type: ClusterIP
