clusters/fremont/marketing/marketing-site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketing-site
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "milkshakes.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: marketing-site-svc
            port:
              number: 80
